# capcom

./: .editorconfig  .gitignore  .gitleaks.toml  .ground-control.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: completion-verifier.md
.claude/hooks/: adr-boundary-check.sh  protect_files.sh  verify-extra.sh
.claude/rules/: implementation-quality.md  review-standards.md
.claude/skills/gh-workflow-monitor/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/repo-setup/: SKILL.md
.claude/skills/review-tests/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/stage/: SKILL.md
.github/workflows/: ci.yml
crates/capcom/: Cargo.toml
crates/capcom-arch-tests/: Cargo.toml
crates/capcom-arch-tests/src/: lib.rs
crates/capcom-arch-tests/tests/: kernel_boundary.rs  no_banned_engines.rs  no_distributed_code.rs
crates/capcom-engine/: Cargo.toml
crates/capcom-engine/src/: main.rs
crates/capcom/src/: error.rs  lib.rs
crates/capcom/src/data_model/: graph.rs  ids.rs  labels.rs  mod.rs  node.rs  properties.rs  relationship.rs
docs/: APH-DM-001-preflight.md  README.md
docs/design/: data-model.md
scripts/: check-adr-conformance.sh
