[package]
name = "capcom-arch-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Architecture tests for the capcom workspace -- enforced via cargo test"
publish = false

[lints]
workspace = true

[dev-dependencies]
capcom = { path = "../capcom" }
