[package]
name = "capcom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capcom engine kernel -- graph database storage, transactions, and query execution"

[lints]
workspace = true
